previous search local storage added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <main>
         <nav class="navbar navbar-dark bg-primary text-white justify-content-center">
-            <p class="fs-2 m-2">Weather Dashboard</p>
+            <i class="fs-2 m-2">AND NOW, THE WEATHER...</i>
         </nav>
         </nav>
 
@@ -30,7 +30,7 @@
                     <button class="btn btn-info" id="searchbtn">Search</button>
                     </div>
                     <p>Previous Searches</p>
-                    <div id="saved-inputs"></div>
+                    <div id="search-container"></div>
                 </div>
 
                 <div id="city-result" class="col-8 m-2 border border-primary text-center">
